Add paparazzi deps